corrected grammar errors, added languages and frameworks

--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Strata by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Luís Vieira</title>
@@ -31,16 +26,14 @@
 						<header class="major">
 							<h2>About Me</h2>
 						</header>
-						<p>Hi! My name is Luís Vieira, a 22 year old, and I am currently a master's degree studente in Software Engineering, having already a post-graduation specialized in Inteliigent Systems
+						<p>Hi! My name is Luís Vieira, a 22 year old, and I am currently a master's degree sudent in Software Engineering, having already post-graduated with specialization in Intelligent Systems
 							and Language Engineering!<br/>
-							Throughout my studies I have worked with many different languages, such as Python, Javascript, Ruby, JAVA, C, C#, and frameworks, for example Express/Node.JS and Ruby on Rails.
 							With a constant hunger for knowledge and looking for the fun of everything in life, I tend to try out different things and learn my way through them!
 						</p>
 						<p>Outside of the studies field I am a very active person having practiced various sports including basketball and swimming, all the way to table tennis.
 							In parallel, I became an active scout at the age of 6 on my local area, Oliveira de Frades, up until my twentieth birthday, which allowed me to grow in ways I could haver never believed were possible.
 							This time gave me several soft and hard skills, highlighting the capability of decision making, group leadership and criativity in various scenarios.
 							If you want to find out a little bit more about me, you can check my <strong>resume</strong> down below!</p>
-
 						<ul class="actions">
 							<li><a href="assets/documents/resume.pdf" target="_blank" class="button">Resume</a></li>
 						</ul>
@@ -88,10 +81,35 @@
 
 				<!-- Three -->
 					<section id="three">
+						<h2>Languages and Frameworks</h2>
+						<div>
+							<img src="https://s3.dualstack.us-east-2.amazonaws.com/pythondotorg-assets/media/community/logos/python-logo-only.png" title="Python" alt="Python" width="30" height="35"/>
+							<img src="https://cdn.freebiesupply.com/logos/thumbs/2x/java-logo.png" title="Java" alt="Java" width="50" height="40"/>
+							<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/CSS3_logo_and_wordmark.svg/1200px-CSS3_logo_and_wordmark.svg.png"  title="CSS3" alt="CSS" width="30" height="35"/>
+							<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/2048px-HTML5_logo_and_wordmark.svg.png" title="HTML5" alt="HTML" width="35" height="35"/>
+							<img src="https://www.freepnglogos.com/uploads/javascript-png/javascript-logo-hq-png-1.png" title="JavaScript" alt="JavaScript" width="35" height="35"/>
+							<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Ruby_logo.svg/640px-Ruby_logo.svg.png" title="Ruby" alt="Ruby" width="30" height="30"/>
+							<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/16/Ruby_on_Rails-logo.png/640px-Ruby_on_Rails-logo.png" title="Rails" alt="Rails" width="30" height="40"/>
+							<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Database-mysql.svg/640px-Database-mysql.svg.png" title="MySQL"  alt="MySQL" width="30" height="40"/>
+							<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Node.js_logo.svg/640px-Node.js_logo.svg.png" title="NodeJS" alt="NodeJS" width="45" height="35"/>
+							<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Git-logo.svg/640px-Git-logo.svg.png" title="Git" alt="Git" width="65" height="35"/>
+							<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/C_Logo.png/640px-C_Logo.png" title="C" alt="C" width="30" height="35"/>
+						</div>
+					</section>
+
+				<!-- Four -->
+					<section id="four">
 						<h2>Contact Me</h2>
 						<p>If for any reason you wish to contact me, go right ahead!<br/>
-							 You can find my information on the side!</p>
+							 You can find my information on the side or down below!</p>
+						<ul class="icons">
+							<li><a href="https://www.linkedin.com/in/luispedrovieira/" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://github.com/luispedrovieira30" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
+							<li><a href="https://luisvieira36@gmail.com" class="icon solid fa-envelope" target="_blank"><span class="label">Email</span></a></li>
+						</ul>
 					</section>
+
+
 
 				<!-- Four -->
 				<!--
