--- a/index.html
+++ b/index.html
@@ -40,20 +40,20 @@
 					</section>
 
 				<!-- Two -->
-					<!-- <section id="two">
-						<h2>Recent Work</h2>
+					<section id="two">
+						<h2>Projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="https://github.com/luispedrovieira30/RPCW2022" target="_blank" class="image fit thumb"><img src="images/rpcw.png" alt="" /></a>
+								<h3>Didatic Resource Repositorium</h3>
+								<!-- <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="https://github.com/luispedrovieira30/LI4" target="_blank" class="image fit thumb"><img src="images/wwb.png" alt="" /></a>
+								<h3>World Wide Basketball</h3>
+								<!-- <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p> -->
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
+							<!-- <article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
 								<h3>Tortor metus commodo</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
@@ -72,12 +72,12 @@
 								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
 								<h3>Risus ornare lacinia</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
+							</article> -->
 						</div>
 						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
+							<li><a href="https://github.com/luispedrovieira30?tab=repositories" target="_blank" class="button">Other Projects</a></li>
 						</ul>
-					</section> -->
+					</section>
 
 				<!-- Three -->
 					<section id="three">
@@ -111,10 +111,10 @@
 
 
 
-				<!-- Four -->
+				<!-- Five -->
 				<!--
-					<section id="four">
-						<h2>Elements</h2>
+					<section id="five">
+						<h2>Projects</h2>
 
 						<section>
 							<h4>Text</h4>
