--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Projects</h2>
+						<h2>Personal and University Projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://github.com/luispedrovieira30/RPCW2022" target="_blank" class="image fit thumb"><img src="images/rpcw.png" alt="" /></a>
