--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
 					<section id="two">
 						<h2>Personal and University Projects</h2>
 						<div class="row">
-							<!-- <article class="col-6 col-12-xsmall work-item">
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://github.com/luispedrovieira30/RPCW2022" target="_blank" class="image fit thumb"><img src="images/rpcw.png" alt="" /></a>
 								<h3>Didatic Resource Repositorium</h3> -->
 								<!-- <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p> -->
-							<!-- </article>
+							<!-- <!-- </article> -->
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://github.com/luispedrovieira30/LI4" target="_blank" class="image fit thumb"><img src="images/wwb.png" alt="" /></a>
 								<h3>World Wide Basketball</h3> -->
 								<!-- <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p> -->
-							<!-- </article> -->
+							</article>
 							<!-- <article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
 								<h3>Tortor metus commodo</h3>
