--- a/index.html
+++ b/index.html
@@ -45,12 +45,13 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://github.com/luispedrovieira30/RPCW2022" target="_blank" class="image fit thumb"><img src="images/rpcw.png" alt="" /></a>
-								<h3>Didatic Resource Repositorium</h3> -->
+								<h3>Didatic Resource Repositorium</h3>
 								<!-- <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p> -->
 							<!-- <!-- </article> -->
+							<br/>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://github.com/luispedrovieira30/LI4" target="_blank" class="image fit thumb"><img src="images/wwb.png" alt="" /></a>
-								<h3>World Wide Basketball</h3> -->
+								<h3>World Wide Basketball</h3>
 								<!-- <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p> -->
 							</article>
 							<!-- <article class="col-6 col-12-xsmall work-item">
