--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<header class="major">
 							<h2>About Me</h2>
 						</header>
-						<p>Hi! My name is Luís Vieira, a 22 year old, and I am currently a master's degree sudent in Software Engineering, having already post-graduated with specialization in Intelligent Systems
+						<p>Hi! My name is Luís Vieira, a 23 year old, and I am currently a master's degree student in Software Engineering, having already post-graduated with specialization in Intelligent Systems
 							and Language Engineering!<br/>
 							With a constant hunger for knowledge and looking for the fun of everything in life, I tend to try out different things and learn my way through them!
 						</p>
@@ -38,9 +38,22 @@
 							<li><a href="assets/documents/resume.pdf" target="_blank" class="button">Resume</a></li>
 						</ul>
 					</section>
-
+				
 				<!-- Two -->
 					<section id="two">
+						<h2>Professional Experience</h2>
+						<div class="row">
+							<article class="col-6 col-12-xsmall">
+								<h3>Wellbeing Warrior</h3>
+								<p>Fullstack Developer - Internship</p>
+								<p>From March 2023 to June 2023</p>
+								<p>Technologies: Ruby, Ruby on Rails, PostgreSQL, Git, GitHub, Slack</p>
+							</article>
+						</div>
+					</section>
+
+				<!-- three -->
+					<section id="three">
 						<h2>Personal and University Projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall">
@@ -80,8 +93,8 @@
 						</ul>
 					</section>
 
-				<!-- Three -->
-					<section id="three">
+				<!-- four -->
+					<section id="four">
 						<h2>Languages and Frameworks</h2>
 						<div>
 							<img src="https://s3.dualstack.us-east-2.amazonaws.com/pythondotorg-assets/media/community/logos/python-logo-only.png" title="Python" alt="Python" width="30" height="35"/>
@@ -98,8 +111,8 @@
 						</div>
 					</section>
 
-				<!-- Four -->
-					<section id="four">
+				<!-- five -->
+					<section id="five">
 						<h2>Contact Me</h2>
 						<p>If for any reason you wish to contact me, go right ahead!<br/>
 							 You can find my information on the side or down below!</p>
