updates and changes to online curriculum

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 	</head>
 	<body class="is-preload">
 
@@ -26,8 +27,9 @@
 						<header class="major">
 							<h2>About Me</h2>
 						</header>
-						<p>Hi! My name is Luís Vieira, a 23 year old, and I am currently a master's degree student in Software Engineering, having already post-graduated with specialization in Intelligent Systems
-							and Language Engineering!<br/>
+						<br/>
+						<p>Hello there! My name is Luís Vieira, a 24 year old, an engineer with a masters' in Software Engineering specialized in Intelligent Systems
+							and Language Engineering!
 							With a constant hunger for knowledge and looking for the fun of everything in life, I tend to try out different things and learn my way through them!
 						</p>
 						<p>Outside of the studies field I am a very active person having practiced various sports including basketball and swimming, all the way to table tennis.
@@ -42,12 +44,29 @@
 				<!-- Two -->
 					<section id="two">
 						<h2>Professional Experience</h2>
+						<br/>
 						<div class="row">
 							<article class="col-6 col-12-xsmall">
 								<h3>Wellbeing Warrior</h3>
 								<p>Fullstack Developer - Internship</p>
-								<p>From March 2023 to June 2023</p>
-								<p>Technologies: Ruby, Ruby on Rails, PostgreSQL, Git, GitHub, Slack</p>
+								<p>From: March 2023 to June 2023</p>
+								<p>Technologies: Ruby, Ruby on Rails, PostgreSQL</p>
+							</article>
+							<article class="col-6 col-12-xsmall">
+								<h3>DTx - Digital Transformation Colab</h3>
+								<p>Junior Software Engineer</p>
+								<p>From: October 2023 to February 2024</p>
+								<h4>Projects:</h4>
+								<ul>
+									<li>
+										<p>R2U</p>
+										<p>Technologies and Frameworks: .NET8, C#, Typescript, NuxtJS, PostgreSQL</p>
+									</li>
+									<li>
+										<p>BE.Neutral</p>
+										<p>Technologies and Frameworks: .NET8, C#, Typescript, NuxtJS, PostgreSQL, Mapbox API</p>
+									</li>
+								</ul>
 							</article>
 						</div>
 					</section>
@@ -55,17 +74,47 @@
 				<!-- three -->
 					<section id="three">
 						<h2>Personal and University Projects</h2>
-						<div class="row">
+						<br/>
+						<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+							<div class="carousel-inner">
+								<div class="carousel-item active">
+									<a href="https://github.com/luispedrovieira30/RPCW2022" target="_blank" class="d-block w-100 image fit thumb"><img src="images/rpcw.png" alt="" /></a>
+									<div class="carousel-caption d-none d-md-block">
+										<h5>Didatic Resource Repositorium</h5>
+									</div>
+								</div>
+								<div class="carousel-item">
+									<div class="carousel-item active">
+										<a href="https://github.com/luispedrovieira30/LI4" target="_blank" class="d-block w-100 image fit thumb"><img src="images/wwb.png" alt="" /></a>
+										<div class="carousel-caption d-none d-md-block">
+											<h5>World Wide Basketball</h5>
+										</div>
+									</div>
+								</div>
+							</div>
+							<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+								<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+								<span class="sr-only">Previous</span>
+							</a>
+							<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+								<span class="carousel-control-next-icon" aria-hidden="true"></span>
+								<span class="sr-only">Next</span>
+							</a>
+						</div>
+						<ul class="actions">
+							<li><a href="https://github.com/luispedrovieira30?tab=repositories" target="_blank" class="button">Other Projects</a></li>
+						</ul>
+						<!-- <div class="row">
 							<article class="col-6 col-12-xsmall">
 								<a href="https://github.com/luispedrovieira30/RPCW2022" target="_blank" class="image fit thumb"><img src="images/rpcw.png" alt="" /></a>
 								<h3>Didatic Resource Repositorium</h3>
 								<!-- <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p> -->
-							<!-- <!-- </article> -->
+							<!-- </article> -->
 							<!-- <br/> -->
-							<article class="col-6 col-12-xsmall">
+							<!-- <article class="col-6 col-12-xsmall">
 								<a href="https://github.com/luispedrovieira30/LI4" target="_blank" class="image fit thumb"><img src="images/wwb.png" alt="" /></a>
 								<h3>World Wide Basketball</h3>
-								<!-- <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p> -->
+								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<!-- <article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
@@ -87,10 +136,7 @@
 								<h3>Risus ornare lacinia</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article> -->
-						</div>
-						<ul class="actions">
-							<li><a href="https://github.com/luispedrovieira30?tab=repositories" target="_blank" class="button">Other Projects</a></li>
-						</ul>
+						<!-- </div> -->
 					</section>
 
 				<!-- four -->
@@ -105,9 +151,14 @@
 							<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Ruby_logo.svg/640px-Ruby_logo.svg.png" title="Ruby" alt="Ruby" width="30" height="30"/>
 							<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/16/Ruby_on_Rails-logo.png/640px-Ruby_on_Rails-logo.png" title="Rails" alt="Rails" width="30" height="40"/>
 							<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Database-mysql.svg/640px-Database-mysql.svg.png" title="MySQL"  alt="MySQL" width="30" height="40"/>
-							<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Node.js_logo.svg/640px-Node.js_logo.svg.png" title="NodeJS" alt="NodeJS" width="45" height="35"/>
+							<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/29/Postgresql_elephant.svg/1985px-Postgresql_elephant.svg.png" title="PostgreSQL" alt="PostgreSQL" width="30" height="35"/>
 							<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Git-logo.svg/640px-Git-logo.svg.png" title="Git" alt="Git" width="65" height="35"/>
 							<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/C_Logo.png/640px-C_Logo.png" title="C" alt="C" width="30" height="35"/>
+							<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bd/Logo_C_sharp.svg/1820px-Logo_C_sharp.svg.png" title="C#" alt="C#" width="30" height="35"/>
+							<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7d/Microsoft_.NET_logo.svg/1024px-Microsoft_.NET_logo.svg.png" title=".Net" alt=".Net" width="30" height="35">
+							<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Node.js_logo.svg/640px-Node.js_logo.svg.png" title="NodeJS" alt="NodeJS" width="45" height="35"/>
+							<img src="https://cdn.iconscout.com/icon/free/png-256/free-vuejs-1175052.png" title="VueJS" alt="VueJS" width="40" height="35">
+							<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/Nuxt_logo_%282021%29.svg/2560px-Nuxt_logo_%282021%29.svg.png" title="NuxtJS" alt="NuxtJS" width="50" height="35">
 						</div>
 					</section>
 
@@ -467,6 +518,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 	</body>
 </html>
